src/css/ui/components/form.css
/* Various form fields and controls */

.form-field {
  --c-color_form-field_text: var(--u-color_text);
  --c-color_form-field_text_subdued: var(--u-color_text_subdued);
  --c-color_form-field_border: var(--u-color_border);
  --c-color_form-field_border_hovered: var(--u-color_border_hovered);
  --c-color_form-field_focus-border: var(--u-color_focus-border);
  --c-color_form-field_focus-outline: var(--u-color_focus-outline);
  --c-color_form-field_icon_subdued: var(--u-color_icon_subdued);
  --c-color_form-field_clear: var(--u-color_icon_subdued);
  --c-color_form-field_clear_hovered: var(--u-color_icon_hovered);
  --c-color_form-field_background: var(--u-color_element);
  --c-color_form-field_background_hovered: var(--u-color_element_hovered);
  --c-font-size_form-field_text: var(--font-size-medium);
  --c-padding-y_form-field_text: 0.5rem;
  --c-padding-x_form-field_text: 0.75rem;
  --c-padding-x_form-field_text_with-icon: 2.125rem;
}

.form-field .label,
.form-field a .label {
  font-size: var(--font-size-medium);
  font-weight: bold;
  color: var(--c-color_form-field_text);
}

.form-field .help-text,
.form-field a .help-text {
  font-size: var(--font-size-small);
  color: var(--c-color_form-field_text_subdued);
}

/* -- TextField ------------------------------------------------------------ */

.text-field {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}
.text-field input[type="text"],
.text-field input[type="email"],
.text-field textarea {
  border: 1px solid var(--c-color_form-field_border);
  border-radius: var(--border-radius-base);
  padding: var(--c-padding-y_form-field_text) var(--c-padding-x_form-field_text);
  font-size: var(--c-font-size_form-field_text);
  background-color: var(--c-color_form-field_background);
  color: var(--c-color_form-field_text);
}

.text-field .text-field_input {
  position: relative;
}

.text-field .text-field_input.text-field_with-icon .status-indicator {
  position: absolute;
  top: 0.5rem;
  left: 0.5rem;
}

.text-field .text-field_input.text-field_with-icon .text-field_icon .icon {
  position: absolute;
  top: 0.6875rem;
  left: 0.75rem;
  font-size: var(--font-size-medium);
  color: var(--c-color_form-field_icon_subdued);
  transition: none;
}

.text-field .text-field_input .text-field_clear {
  position: absolute;
  top: 0;
  right: 0;
  display: flex;
  place-items: center;
  place-content: center;
  width: 1.875rem;
  height: 2.25rem;
  font-size: var(--font-size-medium);
  color: var(--c-color_form-field_clear);
}
.text-field .text-field_input .text-field_clear:hover .icon {
  color: var(--c-color_form-field_clear_hovered);
}

.text-field .text-field_input input[type="text"],
.text-field .text-field_input textarea {
  width: 100%;
}

.text-field .text-field_input.text-field_with-icon input[type="text"],
.text-field .text-field_input.text-field_with-icon textarea {
  padding-left: var(--c-padding-x_form-field_text_with-icon);
}

.text-field input[type="text"] {
  height: 2.25rem;
}

.text-field textarea {
  line-height: 1.5;
}

.text-field input[type="text"]:hover,
.text-field textarea:hover {
  border-color: var(--c-color_form-field_border_hovered);
}

.text-field input[type="text"]:focus,
.text-field textarea:focus {
  outline: none;
  border-color: var(--c-color_form-field_focus-border);
  box-shadow: 0 0 0 2px var(--c-color_form-field_focus-outline);
}

.text-field.text-field_is-invalid .help-text {
  color: var(--u-color_critical_text);
  font-weight: bold;
}

.text-field .text-field_ghost {
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  align-items: center;
  padding: var(--c-padding-y_form-field_text) var(--c-padding-x_form-field_text);
  font-size: var(--c-font-size_form-field_text);
  color: var(--c-color_form-field_text_subdued);
  white-space: pre;
  overflow: hidden;
  /* to match the 1px border on the input */
  border: 1px solid transparent;
}

.text-field .text-field_input.text-field_with-icon .text-field_ghost {
  padding-left: var(--c-padding-x_form-field_text_with-icon);
}

.text-field .text-field_input.text-field_with-ghost input[type="text"],
.text-field .text-field_input.text-field_with-ghost textarea {
  position: relative;
  z-index: 2;
  background: transparent;
}

/* -- TextField ------------------------------------------------------------ */

.number-field {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}
.number-field input[type="number"] {
  border: 1px solid var(--c-color_form-field_border);
  border-radius: var(--border-radius-base);
  padding: var(--c-padding-y_form-field_text) var(--c-padding-x_form-field_text);
  font-size: var(--c-font-size_form-field_text);
  background-color: var(--c-color_form-field_background);
  color: var(--c-color_form-field_text);
}

.number-field .number-field_input {
  position: relative;
}

.number-field .number-field_input.number-field_with-icon .status-indicator {
  position: absolute;
  top: 0.5rem;
  left: 0.5rem;
}

.number-field
  .number-field_input.number-field_with-icon
  .number-field_icon
  .icon {
  position: absolute;
  top: 0.6875rem;
  left: 0.75rem;
  font-size: var(--font-size-medium);
  color: var(--c-color_form-field_icon_subdued);
  transition: none;
}

.number-field .number-field_input .number-field_clear {
  position: absolute;
  top: 0;
  right: 0;
  display: flex;
  place-items: center;
  place-content: center;
  width: 1.875rem;
  height: 2.25rem;
  font-size: var(--font-size-medium);
  color: var(--c-color_form-field_clear);
}
.number-field .number-field_input .number-field_clear:hover .icon {
  color: var(--c-color_form-field_clear_hovered);
}

.number-field .number-field_input input[type="number"] {
  width: 100%;
}

.number-field .number-field_input.number-field_with-icon input[type="number"] {
}

.number-field input[type="number"] {
  height: 2.25rem;
}

.number-field input[type="number"]:hover {
  border-color: var(--c-color_form-field_border_hovered);
}

.number-field input[type="number"]:focus {
  outline: none;
  border-color: var(--c-color_form-field_focus-border);
  box-shadow: 0 0 0 2px var(--c-color_form-field_focus-outline);
}

.number-field.number-field_is-invalid .help-text {
  color: var(--u-color_critical_text);
  font-weight: bold;
}

/* -- RadioField ----------------------------------------------------------- */

.radio-field {
  display: flex;
  flex-direction: column;
  gap: 0.25rem;
}

.radio-field .radio-field_option {
  display: flex;
  flex-direction: row;
  gap: 0.5rem;
  align-items: flex-start;
  max-width: 26rem;
  border-radius: var(--border-radius-base);
  transition: all 0.2s;
  padding: 0 0.75rem 0.25rem 0.25rem;
}

.radio-field .radio-field_option:hover {
  background: var(--c-color_form-field_background_hovered);
}

.radio-field .radio-field_option .radio-field_radio {
  display: flex;
  place-items: center;
  height: 2.25rem;
  width: 1.75rem;
  flex-shrink: 0;
}

/* TODO: style this like the design */
.radio-field .radio-field_option input[type="radio"] {
  margin-top: 0;
  width: 1rem;
  height: 1rem;
}

.radio-field .label-and-help-text {
  display: flex;
  flex-direction: column;
  margin-top: 0.375rem;
}

.radio-field .label-and-help-text .label {
  display: flex;
  align-items: center;
  height: 1.5rem;
}

.radio-field .label-and-help-text .help-text {
  display: flex;
  align-items: center;
}

/* -- CheckboxField ----------------------------------------------------------- */

.checkbox-field {
  display: flex;
  flex-direction: row;
  gap: 0.5rem;
  max-width: 26rem;
  align-items: center;
  border-radius: var(--border-radius-base);
  transition: all 0.2s;
}

.checkbox-field:has(.label-and-help-text) {
  align-items: flex-start;
  padding: 0.25rem 0.75rem 0.25rem 0.25rem;
}

.checkbox-field:not(:has(.label-and-help-text)) {
  line-height: 1;
  padding: 0.25rem 0.65rem 0.25rem 0.25rem;
}

.checkbox-field:hover {
  background: var(--c-color_form-field_background_hovered);
}

.checkbox-field .label-and-help-text {
  display: flex;
  flex-direction: column;
  margin-top: -0.125rem;
}

.checkbox-field .label-and-help-text .label {
  display: flex;
  align-items: center;
  height: 1.5rem;
}

.checkbox-field .label-and-help-text .help-text {
  display: flex;
  align-items: center;
}

